--- a/style.css
+++ b/style.css
@@ -878,7 +878,8 @@ canvas#dorian-canvas {
 }
 
 .navigation-button:hover,
-.custom-btn-dorian:hover
+.custom-btn-dorian:hover,
+.btn-go-right-column:hover
  {
   background-color: rgb(255, 255, 255);
   color: #000000;
@@ -887,11 +888,21 @@ canvas#dorian-canvas {
 }
 
 .navigation-button:active,
-.custom-btn-dorian:active{
+.custom-btn-dorian:active
+{
    background-color: rgb(255, 255, 255);
   color: #000000;
   transition: all 0.3s ease;
   scale: 0.80;
+}
+
+.btn-go-right-column:active{
+  background-color: rgb(0, 0, 0);
+  color: #000000;
+  transition: all 0.3s ease;
+  scale: 0.80;
+  box-shadow: inset 0 0 12px rgba(181, 255, 241, 0.544),
+    inset 0 0 3px rgba(153, 255, 245, 0.5);
 }
 
 
