--- a/style.css
+++ b/style.css
@@ -71,9 +71,9 @@ body::-webkit-scrollbar {
   letter-spacing: -0.4rem;
   font-size: 6rem;
   font-weight: 600;
-  font-family: "Goldman", sans-serif;
+  font-family: "bruno ace sc", sans-serif;
   animation-name: livingGlow, slideFadeIn;
-  font-weight: 1000;
+  font-weight: 500;
   text-decoration: none;
   color: white;
   transition: scale 0.2s ease-in-out;
@@ -498,6 +498,52 @@ canvas#dorian-canvas {
   .header {
     margin: 4rem 0.5rem 2rem 0.5rem;
   }
+     .heading-title-living-grid {
+    font-size: 1.7rem;
+    font-weight: 400;
+    letter-spacing: 0;
+    color: white;
+    animation: none;
+    text-shadow: rgba(230, 230, 230, 0.885) 0 -8px 3px,
+      rgba(255, 255, 255, 0.921) 0 0 3px;
+  }
+
+  .navigation-title {
+    font-weight: 400;
+    animation-name: slideIn;
+    animation-iteration-count: initial;
+    transition: 2s ease-in;
+    margin-left: -1.6rem;
+    font-family: "bruno ace sc", sans-serif;
+    margin-bottom: 0.3rem;
+    animation-duration: 3s;
+  }
+@keyframes slideIn {
+    from {
+      transform: translateX(30%);
+      opacity: 0;
+    }
+    to {
+      transform: translateX(0);
+      opacity: 1;
+    }
+  }
+
+  .header-video {
+    position: absolute;
+    z-index: 0;
+    top: 20%;
+    left: 50%;
+    width: 150px; /* Adjust as needed */
+    height: auto;
+    z-index: 0;
+    opacity: 0.3; /* Dim it so text stands out */
+    pointer-events: none;
+    scale: 1;
+    translate: -50%;
+  }
+  
+}
   .heading-title {
     font-size: 2rem;
     font-weight: 400;
@@ -509,6 +555,7 @@ canvas#dorian-canvas {
     text-shadow: rgba(230, 230, 230, 0.885) 0 -8px 3px,
       rgba(255, 255, 255, 0.921) 0 0 3px;
   }
+ 
 
   .material-symbols-outlined {
     font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 48;
@@ -868,7 +915,8 @@ canvas#dorian-canvas {
 .navigation-button {
   font-family: "Rajdhani", sans-serif;
   font-size: 0.9rem;
-  padding: 0.3rem 0.8rem;
+  padding: 0.3rem 0.5rem;
+  font-weight: 500;
   color: white;
   background-color: transparent;
   border: none;
