--- a/style.css
+++ b/style.css
@@ -476,14 +476,19 @@ canvas#dorian-canvas {
     margin: 4rem 0.5rem 2rem 0.5rem;
   }
      .heading-title-living-grid {
-    font-size: 1.7rem;
-    font-weight: 500;
+    font-size: 1rem;
+    font-weight: 700;
     letter-spacing: -0.04em;
+    /* Removed invalid text-emphasis-color linear-gradient */
     z-index: 1000;
-    color: white;
+    /* Removed invalid text-decoration color value */
+    color: rgb(17, 17, 17);
     animation: none;
     text-shadow: rgba(230, 230, 230, 0.885) 0 -8px 3px,
-      rgba(255, 255, 255, 0.921) 0 0 3px;
+      rgba(255, 255, 255, 0.921) 0 0 3px,
+      rgba(255, 255, 255, 0.921) 0 0 3px,
+      rgba(38, 0, 255, 0.921) 0 0 5px,
+      rgba(0, 17, 255, 0.921) 0 3px 5px;
   }
 
   .navigation-title {
@@ -570,7 +575,7 @@ canvas#dorian-canvas {
 
   .heading-subtitle {
     margin-bottom: 200px;
-    font-size: 0.6rem;
+    font-size: 0.4rem;
     letter-spacing: 0.05rem;
     font-weight: 100;
     z-index: 1000;
@@ -710,15 +715,20 @@ canvas#dorian-canvas {
       );
   }
 .heading-title {
-  font-size: 2.5rem;
-  font-weight: 600;
+  font-size: 2.7rem;
+  width: 280px;
+  border-radius: 50%;
+  letter-spacing: -0.04em;
+  font-weight: 800;
+  text-shadow: rgba(255, 255, 255, 0.319) 0 -8px 3px,
+    rgba(255, 255, 255, 0.457) 0 0 3px;
   text-decoration: none;
   color: white;
   margin-top: 6rem;
-  z-index: 1000;
+  z-index: 0;
   font-family: "Bruno Ace SC", sans-serif;
   border-bottom: 4px solid;
-  border-image: linear-gradient(90deg, #111 0%, #6f6f6f 30%, #ffffff 50%, #6b6b6b 70%, #000 100%) 1;
+  border-image: linear-gradient(90deg, #000000 0%, #414141 30%, #ffffff 50%, #3f3f3f 70%, #000000 100%) 1;
   transition: all 1s cubic-bezier(0.4, 0.2, 0.2, 1),
     text-shadow 1s ease-in-out,
     color 1s ease-in-out;
@@ -893,11 +903,11 @@ canvas#dorian-canvas {
   align-items: center;
   justify-content: space-between;
   height: 60px;
-  width: 100%;
+  max-width: 100%;
   padding: 0 1rem;
   box-sizing: border-box;
   border-radius: 1rem;
-  border: 1px solid rgba(255, 255, 255, 0.2);
+  border: 2px solid rgba(255, 255, 255, 0.249);
   background: transparent;
   position: relative;
   box-shadow: 0 -2px 10px rgba(255, 255, 255, 0.679),
