--- a/style.css
+++ b/style.css
@@ -779,6 +779,7 @@ canvas#dorian-canvas {
     font-size: 2rem;
     cursor: pointer;
     border: none;
+    pointer-events: none;
     background: url("menu-bar.png") no-repeat center center;
     background-size: fill;
     display: flex;
