--- a/style.css
+++ b/style.css
@@ -449,11 +449,9 @@ canvas#dorian-canvas {
     border-radius: 1rem;
     background-color: #000;
     border: 1px solid rgba(255, 255, 255, 0.1);
-    box-shadow: 0 0 10px rgba(255, 255, 255, 0.1),
-      0 0 20px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.1), 0 0 20px rgba(0, 0, 0, 0.1);
     margin: 1rem auto;
     padding: 0.5rem;
-   
   }
   canvas:hover {
     box-shadow: none;
@@ -981,12 +979,22 @@ canvas#dorian-canvas {
     70% {
       transform: rotate(1400deg) scale(1.05);
       opacity: 1;
-      animation-timing-function: cubic-bezier(0.2, 0.8, 0.2, 1); /* start slowing */
+      animation-timing-function: cubic-bezier(
+        0.2,
+        0.8,
+        0.2,
+        1
+      ); /* start slowing */
     }
     100% {
       transform: rotate(1720deg) scale(1);
       opacity: 1;
-      animation-timing-function: cubic-bezier(0.2, 0.8, 0.2, 1); /* slow finish */
+      animation-timing-function: cubic-bezier(
+        0.2,
+        0.8,
+        0.2,
+        1
+      ); /* slow finish */
     }
   }
 
@@ -996,8 +1004,14 @@ canvas#dorian-canvas {
     margin-left: 0.3rem;
 
     transition: box-shadow 0.6s cubic-bezier(0.4, 0.2, 0.2, 1), filter 0.4s;
-    animation: rotate 1.2s cubic-bezier(0.4, 0.2, 0.2, 1) 1;
+    animation: rotate 2.2s cubic-bezier(0.4, 0.2, 0.2, 1) 1 both;
     animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+    animation-delay: 0.2s;
+    filter: drop-shadow(0 0 10px rgba(255, 255, 255, 0.5))
+      drop-shadow(0 0 20px rgba(255, 255, 255, 0.3))
+      drop-shadow(0 0 30px rgba(255, 255, 255, 0.1));
+    z-index: 1000; /* Ensures it stays above other elements */
   }
 
   .navigation-bar-right {
@@ -1010,7 +1024,6 @@ canvas#dorian-canvas {
     animation-fill-mode: backwards;
     animation-iteration-count: 1;
   }
-
 
   .navigation-button {
     font-size: 1rem;
@@ -1051,7 +1064,6 @@ canvas#dorian-canvas {
       transform: translateX(0);
     }
   }
-
 
   .btn-go-right-column:active {
     background-color: rgb(0, 0, 0);
@@ -1300,7 +1312,7 @@ canvas#dorian-canvas {
     margin: 0 auto;
     height: 100%;
     max-height: 95vh;
-    padding: 15rem  1rem;
+    padding: 15rem 1rem;
     border-radius: 13px;
     display: flex;
   }
@@ -1915,8 +1927,8 @@ main.layout,
   height: auto;
   font-weight: 500;
   letter-spacing: -0.1rem;
-  font-size: 3rem;
-  padding: 3rem;
+  font-size: 2rem;
+  padding: 2rem;
   border-radius: 10px;
   border: none;
 }
