--- a/style.css
+++ b/style.css
@@ -1755,7 +1755,7 @@ main.layout,
   bottom: 1rem;
   right: 1rem;
   z-index: 1000;
-  padding: 2rem;
+  padding: 1.3rem;
   transition: opacity 1.3s ease, transform 1.3s ease;
 }
 
@@ -1770,8 +1770,10 @@ main.layout,
 }
 
 .chat-container {
-  width: 90vw;
-  height: 80vh;
+  width: 95vw;
+  max-width: 600px;
+  max-height: 95vh;
+  height: auto;
   background-color: #23242b;
   border-radius: 1rem;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5);
@@ -1928,7 +1930,7 @@ main.layout,
   height: auto;
   font-weight: 500;
   letter-spacing: -0.1rem;
-  font-size: 2rem;
+  font-size: 1.5rem;
   padding: 2rem;
   border-radius: 10px;
   border: none;
