--- a/style.css
+++ b/style.css
@@ -430,7 +430,7 @@ canvas#dorian-canvas {
     box-sizing: border-box;
     z-index: 10;
     transition: 1.5s all ease;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.845), rgb(0, 0, 0)),
+    background-image: linear-gradient(rgba(0, 0, 0, 0.373), rgba(0, 0, 0, 0.91)),
       url("/media/absstract.jpg");
     background-size: fill;
     border-bottom: 0.3rem solid rgba(255, 255, 255, 0.333);
@@ -633,7 +633,6 @@ canvas#dorian-canvas {
   .header-video {
     position: absolute;
     z-index: 0;
-
     top: 10%;
     left: 76%;
     width: 940px; /* Adjust as needed */
@@ -940,18 +939,22 @@ canvas#dorian-canvas {
     align-items: center;
     justify-content: space-between;
     height: 90px;
-    width: 100%;
+    width: 95vw;
     margin: 0 auto;
     max-width: 100%;
     padding: 0 1rem;
     box-sizing: border-box;
     border-radius: 1rem;
-    border: 1px solid rgba(255, 255, 255, 0.249);
+    border: 3px solid rgb(10, 10, 10);
     backdrop-filter: blur(10px);
     margin-bottom: 10rem;
+
     position: relative;
-    box-shadow: 0 -2px 3px rgba(255, 255, 255, 0.672),
-      inset 0 0 5px rgba(255, 255, 255, 0.05);
+    box-shadow:
+      0 1px 8px 1px rgb(0, 4, 122), /* blue bottom glow */
+      0 0 12px 2px rgba(255,255,255,0.22),     /* white glow all around */
+      0 0 24px 6px rgba(255,255,255,0.12),     /* softer white outer glow */
+      inset 0 0 5px rgba(255,255,255,0.05);    /* subtle inner white */
     top: 10px;
   }
 
@@ -1312,7 +1315,6 @@ canvas#dorian-canvas {
     margin: 0 auto;
     height: 100%;
     max-height: 95vh;
-    padding: 15rem 1rem;
     border-radius: 13px;
     display: flex;
   }
@@ -1350,7 +1352,6 @@ canvas#dorian-canvas {
     padding: 0.5rem;
     gap: 1rem;
     border-radius: 1rem;
-    backdrop-filter: blur(12px);
     width: 100%;
     max-width: 100%;
     box-sizing: border-box;
@@ -1760,7 +1761,7 @@ main.layout,
 }
 
 .chat-toggle-btn {
-  background-color: #00000000;
+  background-color: #1f1f1f82;
   color: white;
   font-size: 4rem;
   padding: 1rem 2rem;
@@ -1987,9 +1988,10 @@ main.layout,
 
 /* Chat widget appears */
 .flip-card {
-  width: 600px;
+  width: 800px;
   max-height: 400px;
   position: relative;
+  text-align: center;
   transform-style: preserve-3d;
   transition: transform 0.6s;
   height: 200px;
@@ -2000,6 +2002,7 @@ main.layout,
 .flip-card-inner {
   position: relative;
   max-width: 100%;
+  text-align: center;
   max-height: 100%;
   width: 100%;
   height: 100%;
